[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
glam = "0.21.1"
image = "0.24.2"
itertools = "0.10.3"
lerp = "0.4.0"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.5.3"

[profile.release]
debug = 1
